syntax = "proto3";
package actor;
option csharp_namespace = "ClusterExperiment1.Messages";

message HelloRequest {
    
}

message HelloResponse {
    
}